--- a/style.css
+++ b/style.css
@@ -4,224 +4,111 @@
     padding: 0;
     font-family: 'Courier New', Courier, monospace;
 }
-a
-{
-    text-decoration: none;
-    color:white;
-}
 body
 {
-    display: flex;
-    flex-direction: row;
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    grid-template-rows: 1fr;
     background-color: white;
-    height: 100%;
-    overflow-x: auto;
-    min-width: 300px;
+    
 }
-/* #24242F*/
-.left-section
+
+body::before
 {
+    content: "";
+    background-image: url("https://img.freepik.com/premium-vector/monster-line-art-doodle-pattern-design-vector_90573-639.jpg");
+    opacity: 0.01; /* Set the background image opacity */
     position: absolute;
     top: 0;
-    bottom: 0;
-    width: 20%;
-    background-color: #20202A;
+    left: 0;
+    width: 100%;
     height: 100%;
-    min-width: 600px;
-    min-height: 900px;
+    z-index: 1; /* Put it behind the content */    
 }
-.right-section
-{
+
+.container {
+    display: flex;
     width: 100%;
-    background-color: #1E1E28;
-    min-height: 900px;
+    
 }
 
-.background-1
-{
-    position: absolute;
-    background-image: url("https://images.pexels.com/photos/417074/pexels-photo-417074.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
-    background-size: cover;
-    width: inherit;
-    height: 45%;
-    opacity: 0.05;
-    display: block;
-    background-color: transparent;
-    -webkit-mask-image: linear-gradient(to bottom, transparent, black 20%, black 80%, transparent);
-    mask-image: linear-gradient(to bottom, transparent, black 20%, black 80%, transparent);
-    -webkit-mask-repeat: no-repeat;
-    mask-repeat: no-repeat;
-    -webkit-mask-size: 100% 100%;
-    mask-size: 100% 100%;
-    -webkit-mask-composite: destination-out;
-    mask-composite: exclude;
+.sidebar {
+    flex: 1; /* Take up 20% of the container */
+    background-color: #333;
+    color: #fff;
+    
 }
 
 
-div.other-info > div
-{
-    padding: 20px 20px 0px 20px;
+
+.sidebar ul {
+    list-style: none;
+    padding: 0;
 }
 
-.pre-container
+.sidebar li {
+    padding: 10px;
+}
+
+.sidebar img
 {
-    width: 100%;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+}
+
+.sidebar a {
+    text-decoration: none;
+    color: #fff;
+}
+
+.content {
+    flex: 4; /* Take up 80% of the container */
+    padding: 20px;
+}
+
+/* Media query for mobile responsiveness */
+@media (max-width: 1000px) {
+    .container {
+        flex-direction: column;
+    }
+
+    .sidebar {
+        flex: 1;
+        width: 100%; /* Full width on mobile */
+    }
+
+    .content {
+        flex: 1;
+        width: 100%; /* Full width on mobile */
+    }
+    body {
+        font-size: 22px; /* Larger font size for mobile */
+    }
+    .sidebar
+    {
+        font-size: 22px; /* Larger font size for mobile */
+    }
 }
 
 .pfp-section
 {
-    position: -webkit-sticky;
     display: flex;
     flex-direction: column;
-    height: 25%;
     justify-content: center;
     align-items: center;
-    background-color: #24242F;
-    & img 
-    {
-        width: 35%;
-        height: 50%;
-        border-radius: 50%;
-    }
-    & h5 
-    {
-        padding-top: 15px;
-        font-size: 18px;
-        font-weight: 600 !important;
-        color: white;
-    }
-    & span 
-    {
-        font-weight: bold;
-        color: gray;
-        font-size: 17px;
-    }
-}
-/*GENERAL SETTINGS*/
-.progress-container 
-{
-    margin: 10px auto;
-    width: 50px;
-    height: 50px;
-    background-color: #ccc;
-    border-radius: 50%;
-    position: relative;
-}
-.progress-bar-90 
-{
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-    background: conic-gradient(
-      #FFC107 0% 90%,
-      transparent 20% 50%
-    );
-}
-.progress-bar-90:before
-{
-    position: absolute;
-    display: flex;
-    top: 50%;
-    left: 50%;
-    content: "";
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    background-color: #20202A;
-    transform: translate(-50%, -50%)
-}
-.progress-bar-85 
-{
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-    background: conic-gradient(
-      #FFC107 0% 85%,
-      transparent 20% 50%
-    );
-}
-.progress-bar-85:before
-{
-    position: absolute;
-    display: flex;
-    top: 50%;
-    left: 50%;
-    content: "";
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    background-color: #20202A;
-    transform: translate(-50%, -50%)
-}
-.progress-bar-95 
-{
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-    background: conic-gradient(
-      #FFC107 0% 95%,
-      transparent 20% 50%
-    );
-}
-.progress-bar-95:before
-{
-    position: absolute;
-    display: flex;
-    top: 50%;
-    left: 50%;
-    content: "";
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    background-color: #20202A;
-    transform: translate(-50%, -50%)
-}
-
-
-hr
-{
-    color: grey;
-    height: 3px;
-    border: none;
-    border-top: solid 2px;
-    margin-top: 10px;
-}
-& ul 
-{
-    list-style: none;
-}
-/*----------------*/
-
-.other-info
-{
-    overflow: hidden;
-    position: relative;
+    margin: auto auto;
 }
 
 .location-info
 {
     color: white;
     padding: 20px;
-    & ul
-    {
-        display: flex;
-        flex-direction: column;
-    }
     & ul li
     {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-    }
-    & ul li h6
-    {
-        font-size: 17px;
-        display: inline;
-    }
-    & ul li span
-    {
-        font-size: 16px;
-        display: inline;
     }
 }
 
@@ -238,7 +125,6 @@ hr
 
     display: flex;
     flex-direction: column;
-
     
 }
 
@@ -250,7 +136,7 @@ hr
     {
         justify-content: center;
         align-items: center;
-        color: #A2A2A8;
+        color: white;
         font-size: 16px;
         font-weight: bold;
         top: 50%;
@@ -261,85 +147,137 @@ hr
     }
 }
 
+.progress-container 
+{
+    margin: 10px auto;
+    width: 50px;
+    height: 50px;
+    background-color: white;
+    border-radius: 50%;
+    position: relative;
+}
+.progress-bar-90, .progress-bar-85, .progress-bar-95
+{
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+}
+.progress-bar-90:before, .progress-bar-85:before, .progress-bar-95::before
+{
+    position: absolute;
+    display: flex;
+    top: 50%;
+    left: 50%;
+    content: "";
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: #333;
+    transform: translate(-50%, -50%)
+}
+.progress-bar-90 
+{
+    background: conic-gradient(
+      #FFC107 0% 90%,
+      transparent 20% 50%
+    );
+}
+.progress-bar-85 
+{
+    background: conic-gradient(
+      #FFC107 0% 85%,
+      transparent 20% 50%
+    );
+}
+.progress-bar-95 
+{
+    background: conic-gradient(
+      #FFC107 0% 95%,
+      transparent 20% 50%
+    );
+}
+hr
+{
+    color: grey;
+    height: 3px;
+    border: none;
+    width: 85%;
+    margin: 20px auto;
+    border-top: solid 2px;
+}
+
 .skills-bars
 {
     color: white;
+    padding-inline: 10px;
     & ul li
     {
         display: flex;
         justify-content: space-between;
-        margin: 5px auto;
+        padding: 3px;
+        margin: 5px 0 0 0;
     }
-    & ul li h5
+    & .progress-bar-70, .progress-bar-65, .progress-bar-30
     {
-        font-weight: 400;
-        font-size: 18px;
+        position: relative;
+        border-radius: 5px;
+        background-color: grey;
     }
-    & .progress-bar-70
+    & .progress-bar-70:before, .progress-bar-65:before, .progress-bar-30:before
     {
-    width: 100%;
-    height: 5px;
-    border-radius: 5px;
-    background-color: grey;
+        position: absolute;
+        content: "";
+        height: 5px;
+        border-radius: 5px;
+        background-color: #FFC107;
     }
-    & .progress-bar-70:before
-    {
-    position: absolute;
-    content: "";
-    width: 70%;
-    height: 5px;
-    border-radius: 5px;
-    background-color: #FFC107;
-    }
-    & .progress-bar-65
-    {
-    width: 100%;
-    height: 5px;
-    border-radius: 5px;
-    background-color: grey;
-    }
-    & .progress-bar-65:before
-    {
-    position: absolute;
-    content: "";
-    width: 65%;
-    height: 5px;
-    border-radius: 5px;
-    background-color: #FFC107;
-    }
-    & .progress-bar-30
-    {
-    width: 100%;
-    height: 5px;
-    border-radius: 5px;
-    background-color: grey;
-    }
-    & .progress-bar-30:before
-    {
-    position: absolute;
-    content: "";
-    width: 30%;
-    height: 5px;
-    border-radius: 5px;
-    background-color: #FFC107;
-    }
-    & hr
-    {
-        margin-top: 8%;
-    }
+    & .progress-bar-70:before { width: 70%; }
+    & .progress-bar-65:before { width: 65%; }
+    & .progress-bar-30:before { width: 30%; }
+    & hr { margin-top: 8%; }
+}
+::-webkit-scrollbar {
+    width: 0; /* Set the width to 0 */
+}
+/* Optional: You can also hide the track and thumb */
+::-webkit-scrollbar-track {
+    display: none; /* Hide the track */
+}
+::-webkit-scrollbar-thumb {
+    display: none; /* Hide the thumb */
+}
+a
+{
+    text-decoration: none;
+    color:white;
 }
 
-.download
-{
-    & a
-    {
-        color:#858588;
-        font-weight: bold;
-        font-size: 20px;
-        transition: color 0.3s;
-    }
-    & a:hover
-    {
-        color:#a3a3a4;
-    }
+.bottom::before {
+    content: "";
+    background-image: url("https://img.freepik.com/premium-vector/monster-line-art-doodle-pattern-design-vector_90573-639.jpg");
+    opacity: 0.05; /* Set the background image opacity */
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1; /* Put it behind the content */
 }
+  
+  .download {
+    position: relative; /* Change this to relative */
+    display: flex;
+    z-index: 5;
+    & a {
+      justify-content: center;
+      align-items: center;
+      margin: auto auto;
+      color: rgba(255, 255, 255, 1); /* Set the opacity to 1 */
+      font-weight: bold;
+      font-size: 20px;
+      transition: color 0.3s;
+    }
+    & a:hover {
+      color: white;
+    }
+  }
